--- a/app/src/main/res/layout/custom_layout_font.xml
+++ b/app/src/main/res/layout/custom_layout_font.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -110,12 +111,18 @@
                 android:textOn="@string/btn_bold"
                 android:textStyle="bold" />
 
-            <Button
-                android:id="@+id/btn_color"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Color" />
+        </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <uz.shift.colorpicker.LineColorPicker
+                android:id="@+id/picker"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                app:orientation="horizontal" />
         </LinearLayout>
 
         <LinearLayout
@@ -133,33 +140,33 @@
 
 
                 <LinearLayout
-                    android:background="#fff"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
+                    android:background="#fff"
                     android:orientation="horizontal">
 
                     <TextView
-                        android:layout_marginLeft="10dp"
-                        android:textColor="#000"
                         android:id="@+id/txt_preview"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="10dp"
                         android:layout_weight="1"
-                        android:text="BUBBLE"
                         android:gravity="center"
-                        android:textSize="30dp"
-                        android:layout_gravity="center_vertical" />
+                        android:text="BUBBLE"
+                        android:textColor="#000"
+                        android:textSize="30dp" />
 
 
                     <Button
-                        android:drawableTop="@drawable/re"
                         android:id="@+id/button5"
-                        android:textSize="10dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="right"
-                        android:text="Reset" />
+                        android:drawableTop="@drawable/re"
+                        android:text="Reset"
+                        android:textSize="10dp" />
 
 
                 </LinearLayout>
