--- a/app/src/main/res/layout/activity_main_chat.xml
+++ b/app/src/main/res/layout/activity_main_chat.xml
@@ -19,10 +19,10 @@
             android:id="@+id/chat_font"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="57dp"
+            android:layout_marginTop="55dp"
             android:background="#cccccc"
             android:orientation="horizontal"
-            android:visibility="visible">
+            android:visibility="gone">
 
             <include layout="@layout/custom_layout_font" />
 
