--- a/app/src/main/res/layout/chat_user1_item.xml
+++ b/app/src/main/res/layout/chat_user1_item.xml
@@ -26,7 +26,7 @@
                 android:paddingRight="8dp"
                 android:paddingTop="5dp"
                 android:textStyle="bold"
-                android:textColor="@color/orange"
+                android:textColor="#000"
                 android:text="User1"
                 android:textSize="16sp" />
 
@@ -37,7 +37,7 @@
                 android:layout_centerVertical="true"
                 style="@style/chat_text_message_style"
                 android:paddingLeft="20dp"
-
+                android:textSize="32dp"
                 android:autoLink="web"
                 android:maxWidth="280dp"
                 android:text="Rahul Agrawal is a good boy but he does not know what he wants." />
