--- a/app/src/main/res/layout/chat_user2_item.xml
+++ b/app/src/main/res/layout/chat_user2_item.xml
@@ -45,7 +45,7 @@
             android:id="@id/message_text"
             style="@style/chat_text_message_style"
             android:layout_height="wrap_content"
-
+            android:textSize="32dp"
             android:layout_width="wrap_content"
             android:layout_toLeftOf="@id/time_text"
 
