--- a/app/src/main/res/layout/activity_main_chat.xml
+++ b/app/src/main/res/layout/activity_main_chat.xml
@@ -33,11 +33,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="60dp"
+            android:layout_marginBottom="60dp"
             android:divider="@drawable/chat_divider"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:scrollbarStyle="outsideOverlay" />
     </LinearLayout>
+
 
 
     <LinearLayout
