--- a/app/src/main/res/layout/activity_main_chat.xml
+++ b/app/src/main/res/layout/activity_main_chat.xml
@@ -6,40 +6,39 @@
     android:background="@drawable/background"
     tools:context=".MainActivity">
 
-
-    <include layout="@layout/tool_bar" />
-
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
-        <LinearLayout
+        <include layout="@layout/tool_bar" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_marginTop="58dp"
+        android:layout_marginBottom="65dp"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <RelativeLayout
             android:id="@+id/chat_font"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="55dp"
+            android:layout_marginTop="0dp"
             android:background="#cccccc"
             android:orientation="horizontal"
             android:visibility="gone">
 
             <include layout="@layout/custom_layout_font" />
 
-        </LinearLayout>
-
+        </RelativeLayout>
         <ListView
             android:id="@+id/chat_list_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="60dp"
-            android:layout_marginBottom="65dp"
             android:divider="@drawable/chat_divider"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:scrollbarStyle="outsideOverlay" />
     </LinearLayout>
-
 
 
     <LinearLayout
