--- a/app/src/main/res/layout/custom_layout_font.xml
+++ b/app/src/main/res/layout/custom_layout_font.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <LinearLayout
@@ -164,7 +164,7 @@
 
 
                     <Button
-                        android:id="@+id/button5"
+                        android:id="@+id/btn_reset"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="right"
