--- a/app/src/main/res/layout/chat_user2_item.xml
+++ b/app/src/main/res/layout/chat_user2_item.xml
@@ -1,72 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:paddingBottom="5dp"
     android:paddingTop="5dp">
 
-    <natuan.org.androiddesigntablayout.widgets.ChatLayout
-        android:layout_marginLeft="20dp"
-        android:layout_width="wrap_content" android:id="@+id/bubble" android:layout_alignParentRight="true" android:layout_alignParentEnd="true"
-        android:layout_height="wrap_content" android:background="@drawable/balloon_outgoing_normal">
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:background="@drawable/balloon_outgoing_normal"
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/user_reply_status"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:id="@+id/feed_thumb_group"
+            android:layout_width="140dp"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/message_text"
-            android:layout_marginBottom="5dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
+            android:layout_gravity="center_horizontal">
 
+            <ImageView
+                android:id="@+id/photoImageView"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginRight="5dp"
+                android:layout_marginTop="10dp"
+                android:visibility="gone" />
 
-            android:src="@drawable/ic_single_tick"
-            android:visibility="visible" />
-
-        <TextView
-            android:id="@+id/time_text"
-            style="@style/chat_timings"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:layout_alignBottom="@id/message_text"
-
-            android:textColor="@color/gray"
-            android:paddingBottom="5dp"
-            android:layout_marginRight="2dp"
-            android:layout_marginEnd="2dp"
-            android:layout_toLeftOf="@id/user_reply_status"
-            android:layout_toStartOf="@id/user_reply_status"
-            android:text="17:10" />
+            <ImageView
+                android:visibility="gone"
+                android:id="@+id/ic_play"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_centerInParent="true"
+                android:background="@color/transparent"
+                android:padding="10dp"
+                android:src="@drawable/ic_play" />
+        </RelativeLayout>
 
         <TextView
             android:id="@id/message_text"
             style="@style/chat_text_message_style"
-            android:layout_height="wrap_content"
-            android:textSize="32dp"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginRight="5dp"
             android:layout_toLeftOf="@id/time_text"
-
             android:autoLink="web"
-            android:text="Rahul Agrawal is a good boy but he does not know what he wants." />
+            android:text="Rahul Agrawal is a good boy but he does not know what he wants."
+            android:textSize="32dp" />
 
-        <ImageView
-            android:id="@+id/photoImageView"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:layout_toLeftOf="@id/message_text"
-            android:adjustViewBounds="true"
-            android:background="@drawable/adduser"
-            android:clickable="false"
-            android:focusable="false"
-            android:gravity="left|center"
-            android:maxWidth="460dp"
-            android:minHeight="100dp"
-            android:visibility="gone"
-            android:maxHeight="460dp"/>
+            android:layout_gravity="right"
+            android:orientation="horizontal">
 
-    </natuan.org.androiddesigntablayout.widgets.ChatLayout>
-</RelativeLayout>
+            <ImageView
+                android:id="@+id/user_reply_status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/message_text"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginBottom="5dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/ic_single_tick"
+                android:visibility="visible" />
+
+            <TextView
+                android:id="@+id/time_text"
+                style="@style/chat_timings"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@id/message_text"
+                android:layout_marginEnd="2dp"
+                android:layout_marginRight="10dp"
+                android:layout_toLeftOf="@id/user_reply_status"
+                android:layout_toStartOf="@id/user_reply_status"
+                android:paddingBottom="5dp"
+                android:text="17:10"
+                android:textColor="@color/gray" />
+        </LinearLayout>
+    </LinearLayout>
+</LinearLayout>
