--- a/app/src/main/res/layout/item_attahment.xml
+++ b/app/src/main/res/layout/item_attahment.xml
@@ -59,6 +59,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/txt_gallery"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
